      1mb of data will now be more like 8k than 1mb.  The new
      implementation also avoids realloc();realloc(); patterns that
      can contribute to memory fragmentation.

  o Minor features:
    - Configuration files now accept C-style strings as values.  This
      helps encode characters not allowed in the current configuration
      file format, such as newline or #.  Addresses bug 557.

  o Minor performance improvements:
    - Reference-count and share copies of address policy entries; only
      5% of them were actually distinct.
    - Never walk through the list of logs if we know that no log is
      interested in a given message.

  o Minor bugfixes:
    - When an authority has not signed a consensus, do not try to
      download a nonexistant "certificate with key 00000000".  Bugfix
      on 0.2.0.x. Fixes bug 569.
    - Use a mutex to protect the list of logs, so we never write to
      the list as it's being freed.  Bugfix on 0.1.2.x.  Fixes the
      very rare bug 575, which is kind of the revenge of bug 222.
    - Patch from Karsten Loesing to complain less at both the client
      and the relay when a relay used to have the HSDir flag but doesn't
      anymore, and we try to upload a hidden service descriptor.
    - Stop leaking one cert per TLS context.  Fixes bug 582.  Bugfix
      on 0.2.0.15-alpha.

  o Minor features (controller):
    - Get NS events working again.  (Patch from tup)

  o Minor features (other):
    - Add hidden services and DNSPorts to the list of things that make
      Tor accept that it has running ports.  Change starting Tor with
      no ports from a fatal error to a warning; we might change it
      back if this turns out to confuse anybody.  (Fixes bug 579.)

Changes in version 0.2.0.15-alpha - 2007-12-25
  o Major bugfixes:
    - Fix several remotely triggerable asserts based on DirPort requests
      for a v2 or v3 networkstatus object before we were prepared. This